# python-for-ai-engineers

./: README.md  pyproject.toml
src/python_ai_sprint/day02/: pydantic_basics.py  type_system.py
src/python_ai_sprint/day02_types_pydantic/: llm_schemas.py  model_inheritance.py  model_validator.py  pydantic_basics.py  serialize_deserialize.py
src/python_ai_sprint/day03_async/: async_calls.py  context_managers.py  event_loop.py  gather.py  queue_pipeline.py
