[project]
name = "python-ai-sprint"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohsin Ali",email = "mohammadmohsin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "langchain (>=1.3.11,<2.0.0)",
    "openai (>=2.44.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "fastapi (>=0.138.1,<0.139.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "python_ai_sprint", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "ruff (>=0.15.20,<0.16.0)"
]
